force-app/main/default/objects/ServiceAppointment/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Connects the Service Appointment to the Order. Populated when &quot;On-Site&quot; Service Appointments are booked as part of the confirmation process.</description>
    <inlineHelpText>Connects the Service Appointment to the Order. Populated when &quot;On-Site&quot; Service Appointments are booked as part of the confirmation process.</inlineHelpText>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>