force-app/main/default/objects/ServiceAppointment/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Connects the Service Appointment to the Order Product. Populated when &quot;On-Site&quot; Service Appointments are booked as part of the confirmation process.</description>
    <inlineHelpText>Connects the Service Appointment to the Order Product. Populated when &quot;On-Site&quot; Service Appointments are booked as part of the confirmation process.</inlineHelpText>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>