force-app/main/default/objects/ServiceAppointment/fields/Other_Training_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Training_Details__c</fullName>
    <inlineHelpText>Any other details that is not applicable to other fields that the trainer would need to know</inlineHelpText>
    <label>Other Training Details</label>
    <type>TextArea</type>
</CustomField>