force-app/main/default/objects/ServiceAppointment/fields/Parking_Notes__c.field-meta.xml
<CustomField>
    <fullName>Parking_Notes__c</fullName>
    <inlineHelpText>Details on where the trainer should find the allocated parking area at the clients training location</inlineHelpText>
    <label>Parking Notes</label>
    <type>TextArea</type>
</CustomField>