force-app/main/default/objects/ServiceAppointment/fields/Personal_Protective_Equipment_PPE__c.field-meta.xml
<CustomField>
    <fullName>Personal_Protective_Equipment_PPE__c</fullName>
    <inlineHelpText>List of expected PPE required to enter location</inlineHelpText>
    <label>Personal Protective Equipment (PPE)</label>
    <type>TextArea</type>
</CustomField>