force-app/main/default/objects/ServiceAppointment/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Captures the standard price of the Product. Pulled from Product.</description>
    <inlineHelpText>Indicates the standard price of the Product. Pulled from Product.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>