force-app/main/default/objects/ServiceAppointment/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <formula>Account__r.Primary_Contact__r.FullName__c</formula>
    <label>Primary Contact</label>
    <type>Text</type>
</CustomField>