force-app/main/default/objects/ServiceAppointment/fields/Primary_Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Mobile__c</fullName>
    <formula>Account__r.Primary_Contact__r.Full_Mobile__c</formula>
    <label>Primary Contact Mobile</label>
    <type>Text</type>
</CustomField>