force-app/main/default/objects/ServiceAppointment/fields/Primary_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Phone__c</fullName>
    <formula>Account__r.Primary_Contact__r.Full_Telephone__c</formula>
    <label>Primary Contact Phone</label>
    <type>Text</type>
</CustomField>