force-app/main/default/objects/ServiceAppointment/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures the corresponding classroom, on-site, consulting service or evaluation Product record to pull down information into the Service Appointment (Course).</description>
    <inlineHelpText>Indicates the corresponding classroom, on-site, consulting service or evaluation Product record to pull down information into the Service Appointment (Course).</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>