force-app/main/default/objects/ServiceAppointment/fields/Product_Card_Cert_Title__c.field-meta.xml
<CustomField>
    <fullName>Product_Card_Cert_Title__c</fullName>
    <formula>Product__r.Card_Cert_Product_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Card/Cert Title</label>
    <type>Text</type>
</CustomField>