force-app/main/default/objects/ServiceAppointment/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>Captures the related Product&apos;s Product Family.</description>
    <formula>TEXT(Product__r.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates the related Product&apos;s Product Family.</inlineHelpText>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>