force-app/main/default/objects/ServiceAppointment/fields/Product_Max_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Product_Max_Capacity__c</fullName>
    <formula>Product__r.Maximum_Capacity_Maximum_Attendees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Maximum Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>