force-app/main/default/objects/ServiceAppointment/fields/Product_Maximum_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Product_Maximum_Capacity__c</fullName>
    <label>DELETE_Product Maximum Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>