force-app/main/default/objects/ServiceAppointment/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Captures the name of the Product from the lookup. Used in email templates.</description>
    <formula>Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates the name of the Product from the lookup. Used in email templates.</inlineHelpText>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>