force-app/main/default/objects/ServiceAppointment/fields/QL_Product_Lookup__c.field-meta.xml
<CustomField>
    <fullName>QL_Product_Lookup__c</fullName>
    <formula>Quote_Line__r.SBQQ__Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QL Product Lookup</label>
    <type>Text</type>
</CustomField>