force-app/main/default/objects/ServiceAppointment/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Connects the Service Appointment to the Quote. Populated when &quot;On-Site&quot; Service Appointments are created as part of the quoting process.</description>
    <inlineHelpText>Connects the Service Appointment to the Quote. Populated when &quot;On-Site&quot; Service Appointments are created as part of the quoting process.</inlineHelpText>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>