force-app/main/default/objects/ServiceAppointment/fields/Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Connects the Service Appointment to the Quote Line. Populated when &quot;On-Site&quot; Service Appointments are created as part of the quoting process.</description>
    <inlineHelpText>Connects the Service Appointment to the Quote Line. Populated when &quot;On-Site&quot; Service Appointments are created as part of the quoting process.</inlineHelpText>
    <label>Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>