force-app/main/default/objects/ServiceAppointment/fields/Reason_for_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Cancellation__c</fullName>
    <description>Capture Reason for Cancellation when status is Canceled</description>
    <inlineHelpText>Indicates Reason for Cancellation when status is Canceled</inlineHelpText>
    <label>Reason for Cancellation</label>
    <type>TextArea</type>
</CustomField>