force-app/main/default/objects/ServiceAppointment/fields/Reason_for_Cannot_Complete__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Cannot_Complete__c</fullName>
    <label>Reason for Cannot Complete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>