force-app/main/default/objects/ServiceAppointment/fields/Reminder_Contact__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reminder emails will be sent to this contact instead of the order contact (Only applies to On-Site Courses)</description>
    <inlineHelpText>Reminder emails will be sent to this contact instead of the order contact (Only applies to On-Site Courses)</inlineHelpText>
    <label>Reminder Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Reminder contact must belong to account listed on SA!</errorMessage>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Appointments (Reminder Contact)</relationshipLabel>
    <relationshipName>Service_Appointments1</relationshipName>
    <type>Lookup</type>
</CustomField>