force-app/main/default/objects/ServiceAppointment/fields/Reminder_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Contact_Email__c</fullName>
    <formula>Reminder_Contact__r.Email</formula>
    <label>Reminder Contact Email</label>
    <type>Text</type>
</CustomField>