force-app/main/default/objects/ServiceAppointment/fields/Requires_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Requires_Evaluation__c</fullName>
    <description>Captures if the theory course Product also has an evaluation component associated with it.</description>
    <formula>Product__r.Requires_Evaluation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if the theory course Product also has an evaluation component associated with it.</inlineHelpText>
    <label>Requires Evaluation</label>
    <type>Checkbox</type>
</CustomField>