force-app/main/default/objects/ServiceAppointment/fields/SA_Course_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>SA_Course_Product_Line__c</fullName>
    <formula>Text(Product__r.Course_Product_Line__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SA Course Product Line</label>
    <type>Text</type>
</CustomField>