force-app/main/default/objects/ServiceAppointment/fields/SA_OP_Status__c.field-meta.xml
<CustomField>
    <fullName>SA_OP_Status__c</fullName>
    <formula>Text(Order_Product__r.SBQQ__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SA OP Status</label>
    <type>Text</type>
</CustomField>