force-app/main/default/objects/ServiceAppointment/fields/SA_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>SA_Product_Family__c</fullName>
    <formula>Text(Quote_Line__r.SBQQ__Product__r.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SA Product Family</label>
    <type>Text</type>
</CustomField>