force-app/main/default/objects/ServiceAppointment/fields/SA_Quote_Line_Total__c.field-meta.xml
<CustomField>
    <fullName>SA_Quote_Line_Total__c</fullName>
    <formula>Quote_Line__r.Total_Amount_Without_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SA Quote Line Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>