force-app/main/default/objects/ServiceAppointment/fields/Service_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource_Name__c</fullName>
    <formula>if( isblank(Text(Contractor__c)), 

 Assigned_Service_Resource__r.FirstName + &quot; &quot; +  Assigned_Service_Resource__r.LastName

, Text(Contractor__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Resource Name</label>
    <type>Text</type>
</CustomField>