force-app/main/default/objects/ServiceAppointment/fields/Shadow_Trainer__c.field-meta.xml
<CustomField>
    <fullName>Shadow_Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shadow Trainer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Appointments1</relationshipName>
    <type>Lookup</type>
</CustomField>