force-app/main/default/objects/ServiceAppointment/fields/Spaces_Left__c.field-meta.xml
<CustomField>
    <fullName>Spaces_Left__c</fullName>
    <formula>Course_Max_Capacity__c - Confirmed_Seats__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spaces Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>