force-app/main/default/objects/ServiceAppointment/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <description>Captures the intended target audience for the course. Pulled from Product.</description>
    <inlineHelpText>Indicates the intended target audience for the course. Pulled from Product.</inlineHelpText>
    <label>Target Audience</label>
    <type>TextArea</type>
</CustomField>