force-app/main/default/objects/ServiceAppointment/fields/Time_To_Complete__c.field-meta.xml
<CustomField>
    <fullName>Time_To_Complete__c</fullName>
    <formula>Date_Time_Completed__c -  SchedEndTime</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time To Complete</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>