force-app/main/default/objects/ServiceAppointment/fields/Total_OSG_Resource_Training_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_OSG_Resource_Training_Hours__c</fullName>
    <label>Total OSG Resource Training Hours</label>
    <summarizedField>OSG_Assigned_Resource__c.Scheduled_Training_Hours__c</summarizedField>
    <summaryForeignKey>OSG_Assigned_Resource__c.ServiceAppointment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>