force-app/main/default/objects/ServiceAppointment/fields/Toyota_Training_Room__c.field-meta.xml
<CustomField>
    <fullName>Toyota_Training_Room__c</fullName>
    <formula>TEXT( Order_Product__r.Toyota_Training_Room__c )</formula>
    <label>Toyota Training Room</label>
    <type>Text</type>
</CustomField>