force-app/main/default/objects/ServiceAppointment/fields/Trainer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Notes__c</fullName>
    <description>Notes for the trainer for any additional details regarding the Service Appointment</description>
    <inlineHelpText>Notes for the trainer for any additional details regarding the Service Appointment</inlineHelpText>
    <label>Trainer Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>