force-app/main/default/objects/ServiceAppointment/fields/Trainer_Questionnaire_Missed_Date__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Questionnaire_Missed_Date__c</fullName>
    <inlineHelpText>If populated, records the date a trainer covid questionnaire was not populated when the course started</inlineHelpText>
    <label>Trainer Questionnaire Missed Date</label>
    <type>Date</type>
</CustomField>