force-app/main/default/objects/ServiceAppointment/fields/Training_Address1__c.field-meta.xml
<CustomField>
    <fullName>Training_Address1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Address</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account_Address__c.Location_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>Account_Address__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account_Address__c</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>