force-app/main/default/objects/ServiceAppointment/fields/Training_Room_Access_Details__c.field-meta.xml
<CustomField>
    <fullName>Training_Room_Access_Details__c</fullName>
    <inlineHelpText>Details of where to find the specific room the trainer is expected to be (Ex. 3rd floor, Room 301A, ...)</inlineHelpText>
    <label>Training Room Access Details</label>
    <type>TextArea</type>
</CustomField>