force-app/main/default/objects/ServiceAppointment/fields/Wallet_Card__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Card__c</fullName>
    <description>Captures whether a course product provides a wallet card to attendees who meet all requirements.</description>
    <inlineHelpText>Indicates whether a course product provides a wallet card to attendees who meet all requirements.</inlineHelpText>
    <label>Wallet Card</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>