force-app/main/default/objects/ServiceAppointment/fields/Workflow_Trigger_Time__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Trigger_Time__c</fullName>
    <formula>NOW() - 59/1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workflow Trigger Time</label>
    <type>DateTime</type>
</CustomField>