force-app/main/default/objects/ServiceAppointment/validationRules/Block_Changes.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Changes</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
OR(
AND(
ISCHANGED( SchedStartTime ),
NOT(ISBLANK(PRIORVALUE(SchedStartTime)))
),
AND(
ISCHANGED( Assigned_Service_Resource__c  ),
NOT(ISBLANK(PRIORVALUE(Assigned_Service_Resource__c)))
)
),
$Profile.Name!= &apos;OSG Sys Admin&apos;,
$User.Alias!= &apos;jquin&apos;
)</errorConditionFormula>
    <errorMessage>Changes to scheduled start time and resources have been blocked temporarily! Contact Blessen</errorMessage>
</ValidationRule>