force-app/main/default/objects/ServiceAppointment/validationRules/Cannot_change_course_once_completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_course_once_completed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT(ISBLANK(PRIORVALUE(Date_Time_Completed__c))),
 $User.Alias != &apos;bmath&apos;,
 $User.Alias != &apos;gthom&apos;
)</errorConditionFormula>
    <errorMessage>A Service Appointment can no longer be modified once completed. Contact your administrator to make changes.</errorMessage>
</ValidationRule>