force-app/main/default/objects/ServiceAppointment/validationRules/Cannot_Change_Time_Override.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Time_Override</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED( Allow_Scheduled_Time_Override__c ),
Allow_Scheduled_Time_Override__c = true,
$Profile.Name!= &apos;OSG Sys Admin&apos;,
$User.Alias!= &apos;THugh&apos;,
$User.Alias!= &apos;amccr&apos;,
$User.Alias!= &apos;jquin&apos;,
$User.Alias!= &apos;slove&apos;,
$User.Alias!= &apos;dwilk&apos;,
$User.Alias!= &apos;nhubb&apos;,
$User.Alias!= &apos;amitc&apos;,
$User.Alias!= &apos;slam&apos;
)</errorConditionFormula>
    <errorMessage>You do not have permission to change the time override! Contact scheduling for a time change request</errorMessage>
</ValidationRule>