force-app/main/default/objects/ServiceAppointment/validationRules/Cannot_Close_if_not_OSG_Admin.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Close_if_not_OSG_Admin</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISCHANGED(Status), 
ISPICKVAL(Status , &apos;Completed&apos;),
$Profile.Name != &apos;OSG Sys Admin&apos;,
$Profile.Name != &apos;Integration User&apos;
)</errorConditionFormula>
    <errorMessage>This service appointment must be closed within the OSG Training App!</errorMessage>
</ValidationRule>