force-app/main/default/objects/ServiceAppointment/validationRules/Cannot_Modify_SA_5_Days_to_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Modify_SA_5_Days_to_Start</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISCHANGED(Status),
OR(
ISPICKVAL(Status, &apos;Canceled&apos;),
ISPICKVAL(Status, &apos;Reschedulable&apos;),
AND(
 ISPICKVAL(Status, &apos;Cannot Complete&apos;),
 Product_Family__c = &apos;Courses&apos;
)
),
PRIORVALUE(Days_Till_Scheduled_Start__c) &lt;= 5,
$User.Alias != &apos;aivan&apos;
,$User.Alias != &apos;bmath&apos;
)</errorConditionFormula>
    <errorMessage>Service Appointment can no longer be modified! Contact Ana</errorMessage>
</ValidationRule>