force-app/main/default/objects/ServiceAppointment/validationRules/Check_SA_on_Order_Product_for_OS_SA.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_SA_on_Order_Product_for_OS_SA</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISCHANGED(Status), 
 ISPICKVAL(Status , &apos;Completed&apos;), 
 ISPICKVAL(IH3POS__c, &apos;On-Site&apos;),
 Id !=  Order_Product__r.Classroom_Course__r.Id
)</errorConditionFormula>
    <errorMessage>The associated order product is misconfigured! Contact your administrator.</errorMessage>
</ValidationRule>