force-app/main/default/objects/ServiceAppointment/validationRules/IH3POS_Match_Criteria.validationRule-meta.xml
<ValidationRule>
    <fullName>IH3POS_Match_Criteria</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISCHANGED(IH3POS__c),
NOT(ISCHANGED(Training_Address1__c)),
TEXT(IH3POS__c) !=  Training_Address1__r.IHTPOSHT__c
)</errorConditionFormula>
    <errorMessage>IH3POS cannot be different than the Training Address IH3POS setting!</errorMessage>
</ValidationRule>