force-app/main/default/objects/ServiceAppointment/validationRules/No_New_SA.validationRule-meta.xml
<ValidationRule>
    <fullName>No_New_SA</fullName>
    <active>false</active>
    <errorConditionFormula>isnew()</errorConditionFormula>
    <errorMessage>No New Service Appointments</errorMessage>
</ValidationRule>