force-app/main/default/objects/ServiceAppointment/validationRules/On_Site_SA_Requires_Training_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>On_Site_SA_Requires_Training_Address</fullName>
    <active>true</active>
    <errorConditionFormula>and(
not( Text(Status) = &apos;Canceled&apos;),
Text(IH3POS__c) = &apos;On-Site&apos;,
not(isblank(Quote_Line__c)),
isblank( Quote_Line__r.Quote_Training_Address1__c)
)</errorConditionFormula>
    <errorMessage>On-Site Appointments Require A Valid Training Address</errorMessage>
</ValidationRule>