force-app/main/default/objects/ServiceAppointment/validationRules/OSG_Contractor_Resource.validationRule-meta.xml
<ValidationRule>
    <fullName>OSG_Contractor_Resource</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 Assigned_Service_Resource__c = &apos;00546000000u1No&apos;,
 ISBLANK(Text(Contractor__c)),
 ISCHANGED(Status),
 ISPICKVAL(Status , &apos;Completed&apos;)
)</errorConditionFormula>
    <errorMessage>Need to set a contractor before closing course!</errorMessage>
</ValidationRule>