force-app/main/default/objects/ServiceAppointment/validationRules/Reason_for_Cancellation_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_for_Cancellation_is_required</fullName>
    <active>true</active>
    <description>Reason for Cancellation is required when status = Canceled</description>
    <errorConditionFormula>IF( AND(ISBLANK( Reason_for_Cancellation__c ), ISPICKVAL(  Status , &apos;Canceled&apos;) ) , true, false)</errorConditionFormula>
    <errorMessage>Reason for Cancellation is required when status is Canceled</errorMessage>
</ValidationRule>