force-app/main/default/objects/ServiceAppointment/validationRules/Reason_for_Cannot_Complete_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_for_Cannot_Complete_Required</fullName>
    <active>true</active>
    <description>Reason for Cannot Complete is required when Status of SA is Cannot Complete</description>
    <errorConditionFormula>IF( AND(ISBLANK(  Reason_for_Cannot_Complete__c ), ISPICKVAL( Status , &apos;Cannot Complete&apos;) ) , true, false)</errorConditionFormula>
    <errorMessage>Reason for Cannot Complete is required when status is Cannot Complete</errorMessage>
</ValidationRule>