force-app/main/default/objects/ServiceAppointment/validationRules/Reminder_Contact_Requirements.validationRule-meta.xml
<ValidationRule>
    <fullName>Reminder_Contact_Requirements</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED( Reminder_Contact__c ),
NOT(ISBLANK( Reminder_Contact__c )),
ISBLANK( Reminder_Contact__r.Email )
)</errorConditionFormula>
    <errorMessage>Reminder contact requires an email!</errorMessage>
</ValidationRule>