force-app/main/default/objects/ServiceAppointment/validationRules/SA_Requires_Order_Info.validationRule-meta.xml
<ValidationRule>
    <fullName>SA_Requires_Order_Info</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISCHANGED(Status), 
ISPICKVAL(Status , &apos;Completed&apos;), 
ISPICKVAL(IH3POS__c, &apos;On-Site&apos;),
OR(
ISBLANK(Order__c),
ISBLANK( Order_Product__c)
)
)</errorConditionFormula>
    <errorMessage>The Service Appointment is missing order information. Please contact your administrator</errorMessage>
</ValidationRule>