force-app/main/default/objects/ServiceAppointment/validationRules/Scheduled_Start_has_passed.validationRule-meta.xml
<ValidationRule>
    <fullName>Scheduled_Start_has_passed</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISCHANGED( Status ),
  OR(
  ISPICKVAL(Status , &apos;Completed&apos;)
  /*,ISPICKVAL(Status , &apos;Cannot Complete&apos;)*/
  ),
  SchedStartTime &gt; NOW(),
  $Profile.Name!= &apos;OSG Sys Admin&apos;,
  $User.Id != &apos;00546000000u1OS&apos;,
  $User.Id != &apos;00546000001ehDJ&apos;
)</errorConditionFormula>
    <errorMessage>You cannot change the Status to &quot;Completed&quot; or &quot;Cannot Complete&quot; until the Scheduled Start has passed.</errorMessage>
</ValidationRule>