force-app/main/default/objects/ServiceAppointment/listViews/All_Classroom_Courses.listView-meta.xml
<ListView>
    <fullName>All_Classroom_Courses</fullName>
    <columns>Name</columns>
    <columns>Product__c</columns>
    <columns>Location_Code__c</columns>
    <columns>Confirmed_Seats__c</columns>
    <columns>IH3POS__c</columns>
    <columns>SchedStartTime</columns>
    <columns>EstDuration</columns>
    <columns>Status</columns>
    <columns>Assigned_Service_Resource__c</columns>
    <columns>CITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IH3POS__c</field>
        <operation>equals</operation>
        <value>In-House,3rd Party</value>
    </filters>
    <filters>
        <field>SchedStartTime</field>
        <operation>greaterThan</operation>
        <value>8/20/2019 12:00 AM</value>
    </filters>
    <label>All Classroom Courses</label>
</ListView>